# octobuild

./: .gitattributes  .gitignore  .project  .travis.yml  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  Jenkinsfile  LICENSE  LICENSE-MIT.rtf  README.adoc  README.md  appveyor.yml  bintray-descriptor.json  build.bat  build.rs  build.sh  callgrind.out.6466  choco-publish.ps1  debian.sh  installer-msi.sh  octobuild.nuspec  octobuild.wix  publish.sh  rustfmt.toml  winget-publish.ps1
.cargo/: config
.github/: dependabot.yml
.github/workflows/: ci.yml
.jenkins/distrib/: WixSharp.1.0.34.0.7z  WixSharp.1.0.35.0.7z  cs-script.7z
benches/: lib.rs  vs_postprocess.rs
benches/vs/: postprocess.rs
choco/: octobuild.nuspec
choco/tools/: chocolateyInstall.ps1
ci/: before_deploy.sh  install.sh  script.sh
debian/: changelog  control  copyright  octobuild.install
msbuild/MSBuildOcto/: .gitignore  CL.cs  MSBuildOcto.csproj  MSBuildOcto.sln
msbuild/MSBuildOcto/Properties/: AssemblyInfo.cs
samples/clang/: Makefile
samples/gcc/: .gitignore  Makefile  sample.cpp
samples/vs2013/: .gitignore  Makefile  make.bat  sample.h
samples/xge/: Example.xml  XGETasks.xml
src/: build.rs  build.rs.orig  cache.rs  common.rs  compiler.rs  config.rs  graph.rs  hostname.rs  lazy.rs  lib.rs  main.rs  simple.rs  utils.rs  version.rs  wincmd.rs  worker.rs
src/clang/: compiler.rs  prepare.rs
src/cluster/: builder.rs  client.rs  common.rs
src/cmd/: native.rs  unix.rs  wincmd.rs  windows.rs
src/cmd/native/: unix.rs  windows.rs
src/filter/: comments.rs
src/io/: binary.rs  counter.rs  filecache.rs  hashwriter.rs  memcache.rs  memstream.rs  statistic.rs  tempfile.rs
src/schema/: builder.capnp
src/vs/: compiler.rs  postprocess.rs  postprocess2.rs  prepare.rs
src/xg/: parser.rs
test_cl/: Makefile  foo.h  issue-12.cpp  make.bat  sample.cpp  sample.h  sample2.cpp
test_clang/: Makefile  make.sh
tests/: filter_preprocessed.i  graph-parser.rs  graph-parser.xml  graph_parser.rs
tests/cpp/: sqlite3.h
wix/: License.rtf  MIT.rtf  build-msi.sh  main.wxs  octobuild.wxs
wixcs/: .gitignore  octobuild.nuspec  setup.cs  setup.csproj
