[package]
name = "octobuild"
version = "0.3.1"
authors = [ "Artem V. Navrotskiy <bozaro@users.noreply.github.com>" ]
edition = "2021"
readme = "README.adoc"
description = "Simple distributed compile system for C++"
homepage = "https://github.com/octobuild/octobuild"
repository = "https://github.com/octobuild/octobuild.git"
license = "MIT"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
section = "devel"
priority = "optional"
extended-description = ""
assets = [
    ["target/release/ib_console", "usr/bin/", "755"],
    ["target/release/xgConsole", "usr/bin/", "755"],
    ["target/release/octo_clang", "usr/bin/", "755"],
    ["*.adoc", "usr/share/doc/octobuild/", "644"],
]

[profile.bench]
debug = true

[profile.release]
debug = true

[[bin]]
name = "ib_console"

[[bin]]
name = "xgConsole"

[[bin]]
name = "agent"

[[bin]]
name = "octo_builder"

[[bin]]
name = "octo_cl"

[[bin]]
name = "octo_clang"

[[bin]]
name = "octo_coordinator"

[[bin]]
name = "filter_cl"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "vs_postprocess"
harness = false

[dependencies]
bincode = "1.2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
daemon = { git = "https://github.com/slonopotamus/daemon-rs" }
dirs= "4"
fern = "0.6"
hex = "0.4"
hostname = "0.3"
ipc = { git = "https://github.com/slonopotamus/ipc-rs" }
lazy_static = "1"
libc = "0.2"
local-encoding-ng = "0.1"
log = "0.4"
lz4 = "1"
nickel = "0.11"
num_cpus = "1"
petgraph = "0.6"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
shlex = "1.1"
tempdir = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
xml-rs = "0.8"
yaml-rust = "0.4"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver"] }
winreg = "0.10"
