[package]
name = "octobuild"
version = "1.8.0"
authors = [
    "Artem V. Navrotskiy <bozaro@users.noreply.github.com>",
    "Marat Radchenko <marat@slonopotamus.org>",
]
edition = "2021"
readme = "README.adoc"
description = "Compiler cache for Unreal Engine"
homepage = "https://github.com/octobuild/octobuild"
repository = "https://github.com/octobuild/octobuild.git"
license = "MIT"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
section = "devel"
priority = "optional"
extended-description = ""
assets = [
    ["target/release/ib_console", "usr/bin/", "755"],
    ["target/release/xgConsole", "usr/bin/", "755"],
    ["target/release/octo_clang", "usr/bin/", "755"],
    ["*.adoc", "usr/share/doc/octobuild/", "644"],
]

[profile.bench]
debug = true

[profile.release]
debug = true

[[bin]]
name = "octo_agent"

[[bin]]
name = "octo_builder"

[[bin]]
name = "octo_cl"

[[bin]]
name = "octo_clang"

[[bin]]
name = "octo_coordinator"

[[bin]]
name = "ib_console"

[[bin]]
name = "xgConsole"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "vs_postprocess"
harness = false

[dependencies]
bincode = "2"
byteorder = "1"
crossbeam-channel = "0.5"
daemon = { git = "https://github.com/octobuild/daemon-rs" }
directories = "6"
env_logger = "0.11"
fern = "0.7"
figment = { version = "0.10", features = ["env", "yaml"] }
hex = "0.4"
hostname = "0.4"
rouille = "3"
ipc = { git = "https://github.com/octobuild/ipc-rs" }
libc = "0.2"
local-encoding-ng = "0.1"
log = "0.4"
lz4 = "1"
num_cpus = "1"
os_str_bytes = { version = "7", features = ["conversions"] }
path-absolutize = "3"
petgraph = "0.8"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
shlex = "1.3"
tee = "0.1"
tempfile = "3"
thiserror = "2"
url = {version = "2", features = ["serde"]}
uuid = { version = "1", features = ["v4"] }
xml-rs = "0.8"

[target.'cfg(windows)'.build-dependencies]
cc = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver"] }
winreg = "0.55"
